--- a/index.html
+++ b/index.html
@@ -55,6 +55,77 @@
                 </div>
             </div>
         </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla molestiae qui tenetur blanditiis suscipit, facilis modi sit assumenda officia deserunt totam voluptate minus explicabo saepe architecto, sed libero ex quas.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam minima impedit nesciunt. Dicta accusantium, nesciunt voluptatem laudantium quis incidunt, quasi excepturi tempore laborum minima iure qui? Maiores commodi consectetur illo.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node Js</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quod dolorum maxime repellat fugit eveniet doloremque vitae laboriosam temporibus quo quidem voluptatum iure excepturi quisquam repudiandae earum harum, dignissimos sunt?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quo nostrum ducimus minima consectetur atque sapiente modi alias quod labore? Ab repellendus commodi cum delectus aspernatur quisquam magnam dolore vitae?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">Mongo DB</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus maiores, sed numquam tempora vitae ut perspiciatis totam doloribus exercitationem eius, quas officiis neque quisquam. Rem aspernatur deleniti consequatur fugiat soluta!</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title">A Summery of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div> 
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div> 
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
